---
source: src/tests/lexer.rs
expression: "&tokens"
input_file: src/tests/lexer_inputs/success/raw.txt
---
[
    CONTENT("Hello"),
    CONTENT("Some ignored {{ content }}  {% if true %} hello {%"),
    CONTENT("World\n\nInline as well "),
    CONTENT(""),
    CONTENT("\n"),
]
